@@ -1,0 +1,42 @@
+8 MACRO     NOTHINGBURGER NOTHING, BURGER
+9        NOP
+10        MOVE NOTHING, 8, BURGER
+11        NOP
+Found instance of macro NOTHINGBURGER in line 25 of file macro_test.asm
+14 	ORG 0
+15 	JMP INT_RESET
+16 	RET	
+17 	RET 
+18 	RET	
+19 	RET	
+20 	RET	
+21 	RET	
+22 	RET	
+9 FOO	NOP
+10 	MOVE R1, 8, R2
+11 	NOP
+26 	RET
+29 INT_RESET	XMIT `HIGH FOO, R0
+30 	CALL FOO
+31 	JMP INT_RESET
+0	E0 C	JMP	INT_RESET (C)
+1	AF 0	RET
+2	AF 0	RET
+3	AF 0	RET
+4	AF 0	RET
+5	AF 0	RET
+6	AF 0	RET
+7	AF 0	RET
+FOO
+8	0 0	NOP
+9	1 2	MOVE	R1 8 R2
+A	0 0	NOP
+B	AF 0	RET
+INT_RESET
+C	C0 0	XMIT	`HIGHFOO R0 (null)
+D	A7 8	CALL	FOO (8)
+E	E0 C	JMP	INT_RESET (C)
+Segment: 0
+	 Start address: 0
+	 End address: 14
+Prog size: 30
